# shttpd

./: Makefile.in  README.md  aclocal.m4  aconfig.h.in  config.c  config.h  configure  configure.in  global.c  global.h  http.c  http.h  logfile.c  logfile.h  main.c  mime.c  mime.h  request.c  request.h  resource.c  resource.h  response.c  response.h  shttpd.cfg  thread_mgr.c  thread_mgr.h  utils.c  utils.h
doc/: manual.cs.html  manual.html
doc/src/: manual.aft  manual.cs.aft
html/: index.html
